<resources>
    <string name="app_name">KMM Contacts</string>
    <string name="about">About</string>
    <string name="name_template">%1$s %2$s</string>
    <string name="name_phone">%1$d</string>
    <string name="filter_hint">Filter</string>
    <string name="add">Add</string>
    <string name="contacts">KMM Contacts</string>
    <string name="edit_contact">Edit contact</string>
    <string name="view_contact">View contact</string>
    <string name="view_about">View about</string>
    <string name="github_users">Github users</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="required_error">This field is required</string>
    <string name="email_error">Email is invalid</string>
    <string name="phone_error">Phone is invalid</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="contacts_exported">Contacts exported!</string>
    <string name="no_contacts_imported">No contacts imported</string>
    <plurals name="contacts_imported">
        <item quantity="zero">@string/no_contacts_imported</item>
        <item quantity="one">One contact imported!</item>
        <item quantity="other">%1$d contacts imported!</item>
    </plurals>
    <string name="about_text">This is MVVM + Clean Architecture Sample app that demonstrates how to work with DB and Network. Please use it as a base for your KMM project. Make sure to make Domain model fully independent, it supposed to be fully common for iOS and Android.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
